@@ -6,8 +6,8 @@ import com.project.apsas.dto.response.assignment.TutorialAssignmentItemDto;
 import com.project.apsas.dto.response.content.TutorialContentItemDto;
 import com.project.apsas.dto.response.tutorial.CreateTutorialResponse;
 import com.project.apsas.dto.response.tutorial.DetailTutorialResponse;
+import com.project.apsas.dto.response.tutorial.SearchTutorialResponse;
 import com.project.apsas.dto.response.tutorial.TutorialItemDto;
-import com.project.apsas.entity.Assignment;
 import com.project.apsas.entity.Content;
 import com.project.apsas.entity.Tutorial;
 import com.project.apsas.entity.User;
@@ -15,20 +15,17 @@ import com.project.apsas.enums.ContentStatus;
 import com.project.apsas.enums.TutorialStatus;
 import com.project.apsas.exception.AppException;
 import com.project.apsas.exception.ErrorCode;
-import com.project.apsas.repository.AssignmentRepository;
-import com.project.apsas.repository.ContentRepository;
-import com.project.apsas.repository.TutorialRepository;
-import com.project.apsas.repository.UserRepository;
+import com.project.apsas.repository.*;
 import com.project.apsas.service.AuthService;
 import com.project.apsas.service.TutorialService;
 import lombok.AccessLevel;
-import lombok.AllArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -37,7 +34,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import jakarta.persistence.criteria.Predicate;
-import java.util.ArrayList;
+
 import java.util.List;
 
 @Slf4j
@@ -51,6 +48,7 @@ public class TutorialServiceImpl implements TutorialService {
     UserRepository userRepository;
     AssignmentRepository assignmentRepository;
     ContentRepository contentRepository;
+    CourseRepository courseRepository;
 
     @Override
     public CreateTutorialResponse createTutorial(CreateTutorialRequest request) {
@@ -79,86 +77,81 @@ public class TutorialServiceImpl implements TutorialService {
     }
 
     @Override
-    public List<CreateTutorialResponse> getMyTutorials(String keyword,
-                                                       String status,
-                                                       Boolean hasAssignment) {
+    public Page<SearchTutorialResponse> getMyTutorials(String keyword, String status, Boolean hasAssignment, Pageable pageable) {
         Long currentUserId = Long.parseLong(authService.currentId());
 
-        // lấy user để có name + avatar
-        User user = userRepository.findById(currentUserId)
-                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
+        // 1. Dùng Specification để filter (Giữ nguyên logic cũ)
+        Specification<Tutorial> spec = (root, query, cb) -> {
+            List<Predicate> predicates = new ArrayList<>();
 
-        String avatar;
-        if (user.getProfile() != null) {
-            avatar = user.getProfile().getAvatarUrl();  // đổi cho đúng tên getter trong entity Profile
-        } else {
-            avatar = null;
-        }
+            // BẮT BUỘC: Chỉ lấy tutorial của user hiện tại
+            predicates.add(cb.equal(root.get("createdBy"), currentUserId));
 
-        // lấy tất cả tutorial do user này tạo
-        List<Tutorial> tutorials = tutorialRepository.findByCreatedBy(currentUserId);
-
-        // chuẩn bị keyword (có thể null)
-        String kw = (keyword == null || keyword.isBlank())
-                ? null
-                : keyword.trim().toLowerCase();
-
-        // chuẩn bị filter status (có thể null)
-        TutorialStatus filterStatus = null;
-        if (status != null && !status.isBlank()) {
-            try {
-                filterStatus = TutorialStatus.valueOf(status.toUpperCase());
-            } catch (IllegalArgumentException ex) {
-                // nếu FE gửi status linh tinh thì bỏ qua filter status
-                filterStatus = null;
+            // Filter: Keyword
+            if (keyword != null && !keyword.trim().isEmpty()) {
+                String likePattern = "%" + keyword.trim().toLowerCase() + "%";
+                Predicate titleLike = cb.like(cb.lower(root.get("title")), likePattern);
+                Predicate summaryLike = cb.like(cb.lower(root.get("summary")), likePattern);
+                predicates.add(cb.or(titleLike, summaryLike));
             }
-        }
 
-        TutorialStatus finalFilterStatus = filterStatus;
-        return tutorials.stream()
-                // ---- search theo title + summary ----
-                .filter(t -> {
-                    if (kw == null) return true;
-                    String title = t.getTitle() == null ? "" : t.getTitle().toLowerCase();
-                    String summary = t.getSummary() == null ? "" : t.getSummary().toLowerCase();
-                    return title.contains(kw) || summary.contains(kw);
-                })
-                // ---- filter status ----
-                .filter(t -> finalFilterStatus == null || t.getStatus() == finalFilterStatus)
-                // ---- map sang DTO + TODO: count ----
-                .map(t -> {
-                    Long tutorialId = t.getId();
+            // Filter: Status
+            if (status != null && !status.isBlank()) {
+                try {
+                    TutorialStatus statusEnum = TutorialStatus.valueOf(status.toUpperCase());
+                    predicates.add(cb.equal(root.get("status"), statusEnum));
+                } catch (IllegalArgumentException e) {
+                    // Ignore invalid status
+                }
+            }
 
-                    // TODO: thay 3 dòng dưới bằng logic thực sự
-                    int lessonCount = 0;
-                    int assignmentCount = 0;
-                    int courseCount = 0;
+            // Filter: Has Assignment
+            if (hasAssignment != null) {
+                // Kiểm tra lại tên biến trong Entity Tutorial ('assignments' hoặc 'assignmentLinks')
+                if (hasAssignment) {
+                    predicates.add(cb.isNotEmpty(root.get("assignments")));
+                } else {
+                    predicates.add(cb.isEmpty(root.get("assignments")));
+                }
+            }
 
-                    // Nếu muốn filter theo hasAssignment:
-                    if (hasAssignment != null) {
-                        boolean has = assignmentCount > 0;
-                        if (hasAssignment && !has) return null;
-                        if (!hasAssignment && has) return null;
+            return cb.and(predicates.toArray(new Predicate[0]));
+        };
+
+        // 2. Query DB trả về Page thay vì List
+        Page<Tutorial> pageResult = tutorialRepository.findAll(spec, pageable);
+
+        // 3. Map Page<Tutorial> sang Page<SearchTutorialResponse>
+        // Hàm .map() của Page tự động giữ lại thông tin phân trang (totalElements, totalPages...)
+        return pageResult.map(t -> {
+            int lessonCount = (t.getContents() != null) ? t.getContents().size() : 0;
+            int assignmentCount = (t.getAssignments() != null) ? t.getAssignments().size() : 0;
+
+            int mediaCount = 0;
+            if (t.getContents() != null) {
+                for (Content content : t.getContents()) {
+                    if (content.getMediaList() != null) {
+                        mediaCount += content.getMediaList().size();
                     }
+                }
+            }
 
-                    return CreateTutorialResponse.builder()
-                            .id(tutorialId)
-                            .title(t.getTitle())
-                            .summary(t.getSummary())
-                            .status(t.getStatus())
-                            .lessonCount(lessonCount)
-                            .assignmentCount(assignmentCount)
-                            .courseCount(courseCount)
-                            .creatorName(user.getName())
-                            .creatorAvatar(avatar)
-                            .build();
-                })
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+            return SearchTutorialResponse.builder()
+                    .id(t.getId())
+                    .title(t.getTitle())
+                    .summary(t.getSummary())
+                    .status(t.getStatus())
+                    .lessonCount(lessonCount)
+                    .assignmentCount(assignmentCount)
+                    .mediaCount(mediaCount)
+                    .creatorName(null) // Không cần trả về tên người tạo
+                    .creatorAvatar(null)
+                    .build();
+        });
     }
 
     @Override
-    public Page<CreateTutorialResponse> searchTutorials(String keyword, Pageable pageable) {
+    public Page<SearchTutorialResponse> searchTutorials(String keyword, Pageable pageable) {
         Specification<Tutorial> spec = (root, query, cb) -> {
             List<Predicate> predicates = new ArrayList<>();
 
@@ -173,18 +166,61 @@ public class TutorialServiceImpl implements TutorialService {
                 predicates.add(cb.or(titleLike, summaryLike));
             }
 
+            // Để tránh lỗi N+1 khi đếm assignments/contents, có thể fetch join nếu cần thiết
+            // Tuy nhiên với Pageable, fetch join collection thường gây warning in memory paging.
+            // Ở đây dùng Lazy loading mặc định và transaction để xử lý.
             return cb.and(predicates.toArray(new Predicate[0]));
         };
 
+        // 2. Query lấy danh sách Tutorials
         Page<Tutorial> pageResult = tutorialRepository.findAll(spec, pageable);
 
-        return pageResult.map(t -> CreateTutorialResponse.builder()
-                .id(t.getId())
-                .title(t.getTitle())
-                .summary(t.getSummary())
-                .createdBy(t.getCreatedBy())
-                .status(t.getStatus())
-                .build());
+        // 3. TỐI ƯU HIỆU NĂNG: Bulk Fetch thông tin Creator
+        // Lấy list user ID từ kết quả page
+        Set<Long> userIds = pageResult.getContent().stream()
+                .map(Tutorial::getCreatedBy)
+                .collect(Collectors.toSet());
+
+        // Query 1 lần để lấy map User (Id -> User)
+        Map<Long, User> creatorMap = userRepository.findAllById(userIds).stream()
+                .collect(Collectors.toMap(User::getId, Function.identity()));
+
+        // 4. Map Entity sang Response DTO
+        return pageResult.map(t -> {
+            // Lấy user từ map đã cache
+            User creator = creatorMap.get(t.getCreatedBy());
+
+            // Xử lý các trường count (bảo vệ null safe)
+            int lessonCount = (t.getContents() != null) ? t.getContents().size() : 0;
+            int assignmentCount = (t.getAssignments() != null) ? t.getAssignments().size() : 0;
+
+            // TODO: Logic cho mediaCount và courseCount
+            // Nếu Content có trường type là VIDEO/IMAGE, bạn có thể filter ở đây
+            int mediaCount = 0;
+            assert t.getContents() != null;
+            for(Content content : t.getContents()) {
+                if(content.getMediaList() != null) {
+                    mediaCount += content.getMediaList().size();
+                }
+            }
+            // Nếu cần đếm Course, gọi repo: courseRepository.countByTutorialId(t.getId())
+            // Lưu ý: Gọi repo trong loop map() sẽ không tốt cho hiệu năng nếu list lớn.
+
+
+            return SearchTutorialResponse.builder()
+                    .id(t.getId())
+                    .title(t.getTitle())
+                    .summary(t.getSummary())
+                    .status(t.getStatus())
+                    // Mapping các số liệu thống kê
+                    .lessonCount(lessonCount)
+                    .assignmentCount(assignmentCount)
+                    .mediaCount(mediaCount)
+                    // Mapping thông tin Creator
+                    .creatorName(creator != null ? creator.getName() : "Unknown User") // Giả định User có getFullName
+                    .creatorAvatar(creator != null ? creator.getAvatarUrl() : null)           // Giả định User có getAvatar
+                    .build();
+        });
     }
     @Override
     public Boolean updateTutorial(UpdateTutorialRequest request, Long tutorialId) {
